cors and some bug fixes again